# AndroidBazel

./: .gitignore  README.md  WORKSPACE
app/: BUILD.bazel  build.gradle
app/src/androidTest/java/jp/cordea/androidbazel/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/jp/cordea/androidbazel/: MainActivity.kt
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/jp/cordea/androidbazel/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
